--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -26,6 +27,14 @@
                 <div class="line line2"></div>
                 <div class="line line3"></div>
             </div>
+
+        </div>
+        <div class="wraper">
+            <input type="text" class="input-form">
+            <button class="btn">Add Item</button>
+          
+            <ul class="ul-items"></ul>
+            <button class="clear">clear</button>
 
         </div>
 
